# Examples336

./: .gitignore  README.md  compileall  updatelibs
Beaches/: settings.gradle.kts
Beaches/app/: build.gradle.kts
Beaches/gradle/: libs.versions.toml
BeachesAdapter/app/: build.gradle
Bubbles/app/: build.gradle
Bubbles_kmp/: build.gradle.kts  gradle.properties  settings.gradle.kts
Bubbles_kmp/androidApp/: build.gradle.kts
Bubbles_kmp/composeApp/: build.gradle.kts
Bubbles_kmp/gradle/: libs.versions.toml
Camerax/: local.properties  settings.gradle.kts
Camerax/app/: build.gradle.kts
Camerax/gradle/: libs.versions.toml
ContactsNew/: build.gradle
ContactsNew/app/: build.gradle  build.gradle.kts
ContactsNew/gradle/: libs.versions.toml
GPXTrack/: build.gradle.kts  settings.gradle.kts
Jobsworth/: settings.gradle  settings.gradle.kts
MatchingGame_kmp/: build.gradle.kts  settings.gradle.kts
MatchingGrid/: settings.gradle.kts
MatchingGridViewModel/: settings.gradle.kts
Modifiers/: gradle.properties  settings.gradle.kts
PowerClock/: settings.gradle.kts
Roomy/: build.gradle.kts  gradle.properties  settings.gradle.kts
SimpleBubbles/: settings.gradle.kts
SimpleCamera/: settings.gradle
SimpleMatchIcons/: settings.gradle.kts
SimpleMatchNumUnfinished/: build.gradle  build.gradle.kts  settings.gradle.kts
SimpleMatchNums/: build.gradle  settings.gradle.kts
SmsApp/: settings.gradle  settings.gradle.kts
TouchBubbles/: gradle.properties  settings.gradle.kts
TouchBubbles/app/src/main/cpp/: CMakeLists.txt  jnibubbles.cpp
(+345 files in other folders)
